--- a/modules/apps/headless/headless-web-experience/headless-web-experience-impl/rest-openapi.yaml
+++ b/modules/apps/headless/headless-web-experience/headless-web-experience-impl/rest-openapi.yaml
@@ -76,6 +76,38 @@ components:
           type: string
         description:
           type: string
+        fields:
+          properties:
+            dataType:
+              type: string
+            label:
+              type: string
+            localizable:
+              type: boolean
+            multiple:
+              type: boolean
+            inputControl:
+              type: string
+            predefinedValue:
+              type: string
+            name:
+              type: string
+            repeatable:
+              type: boolean
+            required:
+              type: boolean
+            showLabel:
+              type: boolean
+            options:
+              items:
+                type: object
+                properties:
+                  label:
+                    type: string
+                  value:
+                    type: string
+              type: array
+          type: object
         id:
           format: int64
           type: integer
