LPS-89732 Convert BlogPosting#image to object

--- a/modules/apps/headless/headless-collaboration/headless-collaboration-impl/rest-openapi.yaml
+++ b/modules/apps/headless/headless-collaboration/headless-collaboration-impl/rest-openapi.yaml
@@ -61,9 +61,17 @@ components:
           format: int64
           type: integer
         image:
-          allOf:
-            - $ref: "#/components/schemas/BlogPostingImage"
+          properties:
+            contentUrl:
+              format: uri
+              type: string
+            imageId:
+              format: int64
+              type: integer
+            name:
+              type: string
           readOnly: true
+          type: object
         imageId:
           format: int64
           type: integer
