LPS-89732 Convert BlogPosting#category to array of objects

--- a/modules/apps/headless/headless-collaboration/headless-collaboration-impl/rest-openapi.yaml
+++ b/modules/apps/headless/headless-collaboration/headless-collaboration-impl/rest-openapi.yaml
@@ -28,8 +28,13 @@ components:
           type: string
         category:
           items:
-            format: int64
-            type: integer
+            properties:
+              categoryId:
+                format: int64
+                type: integer
+              categoryName:
+                type: string
+            type: object
           type: array
         comment:
           items:
