--- a/modules/apps/headless/headless-foundation/headless-foundation-impl/rest-openapi.yaml
+++ b/modules/apps/headless/headless-foundation/headless-foundation-impl/rest-openapi.yaml
@@ -570,6 +570,16 @@ paths:
   "/categories/{category-id}/categories":
     get:
       parameters:
+        - in: path
+          name: category-id
+          required: true
+          schema:
+            format: int64
+            type: integer
+        - in: query
+          name: filter
+          schema:
+            type: string
         - in: query
           name: page
           schema:
@@ -578,12 +588,10 @@ paths:
           name: pageSize
           schema:
             type: integer
-        - in: path
-          name: category-id
-          required: true
+        - in: query
+          name: sort
           schema:
-            format: int64
-            type: integer
+            type: string
       responses:
         200:
           content:
@@ -1260,6 +1268,10 @@ paths:
     get:
       parameters:
         - in: query
+          name: filter
+          schema:
+            type: string
+        - in: query
           name: page
           schema:
             type: integer
@@ -1267,6 +1279,10 @@ paths:
           name: pageSize
           schema:
             type: integer
+        - in: query
+          name: sort
+          schema:
+            type: string
         - in: path
           name: vocabulary-id
           required: true
